-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Replication
-
Fully Compatible
-
ALL
-
Repl 2026-02-16
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
BF-41572 surfaced cases where the deadline passed to AutoGetRSTLForStepUpDown is very soon (order of a few ms), causing the timeout to happen way earlier than the RSTL timeout duration. SERVER-117908 used this deadline as a way to place a time limit on session reaping for step down, but didn't account for this case where the deadline is very small.
Prior to this change, if this happened. the RSTL waitForLockUntil would deem this timeout "too short" and fail the step down attempt but allow the node to progress. SERVER-117908 indiscriminately crashed once the deadline passed, not accounting for this case, causing the BF.
We should instead pass the full rstlTimeout value as the deadline for the killOpThread so it still has a reasonable time limit (achieving the original goal of SERVER-117908), but doesn't have to add logic for determining if the timeout is "too short" or not to account for this case.
- is related to
-
SERVER-117908 Add timeout to RSTLKillOpThread during step down
-
- Closed
-
- related to
-
SERVER-125022 RSTLKillOpThread has incorrect deadline when fassertOnLockTimeoutForStepUpDown = 0
-
- Closed
-