SERVER-119490 deadline for kill op thread in step down can be too short (#47914)

GitOrigin-RevId: 147e355be618a5f8fbe41b43a80fc3e54f2d784d